# passivized_docker_engine_client

./: Cargo.toml  README.md  cargo-deny.sh  deny.toml  install-dev-tools.sh  rustfmt.sh  rustfmt.toml
.github/workflows/: ci.yml
apache/: README.md  generate.sh
apache/output/: htpasswd
certificate/: README.md  ca.json  create-ca.sh  create-host.sh  profiles.json  testregistry.locallan.json
certificate/output/: .gitignore  ca.pem  testregistry.locallan-key.pem  testregistry.locallan.crt
examples/: busybox.rs  hello.rs  image-list.rs  nginx.rs
examples/example_utils/: README.md  cli.rs  docker.rs  errors.rs  http.rs  lib.rs  retry.rs
src/: client.rs  errors.rs  imp.rs  lib.rs  model.rs  requests.rs  responses.rs
src/client/: base.rs  container.rs  container_files.rs  containers.rs  exec.rs  images.rs  network.rs  networks.rs  shared.rs  volume.rs  volumes.rs
src/errors/: dec.rs  dec_create.rs  dec_library.rs  dec_use.rs
src/imp/: api.rs  content_type.rs  env.rs  http_proxy.rs  hyper_proxy.rs  hyper_shims.rs  other.rs  serde.rs  url.rs  url_parser.rs
src/model/: archive.rs  container.rs  container_ipam.rs  health_check.rs  mount.rs  network_ipam.rs  other.rs  registry.rs  streams.rs  volume.rs
src/requests/: build_image.rs  create_container.rs  create_exec.rs  create_image.rs  create_network.rs  create_volume.rs  exec.rs  inspect_container.rs  inspect_network.rs  list_containers.rs  logs.rs  remove_container.rs  wait.rs
src/responses/: build_image.rs  container_network_settings.rs  create_container.rs  create_exec.rs  create_network.rs  errors.rs  exec_inspect.rs  file_changes.rs  inspect_container.rs  inspect_container_detail.rs  inspect_network.rs  list_containers.rs  list_images.rs  list_volumes.rs  mount.rs  prune_volumes.rs  top_response.rs  version_response.rs  wait.rs
tests/: test_client.rs  test_container_control.rs  test_container_files.rs  test_containers.rs  test_exec.rs  test_health_check.rs  test_images.rs  test_json_mappings.rs  test_networks.rs  test_registry.rs  test_volumes.rs  test_volumes_prune.rs
tests/fixtures/: container-create-response.json  container_list_without_ipv4.json  fedora-inspect-running-container-response.json  ipam_config_ipv4.json  network-inspect-response-containers.json  network-inspect-response.json  networksettings-ports-wo-portbindings.json  portinfo-tcp-privateport.json  version-response.json
tests/test_utils/: README.md  certs.rs  content_type.rs  files.rs  images.rs  lib.rs  logging.rs
