[package]
authors = ["Joshua Potts <8704475+iamjpotts@users.noreply.github.com>"]
categories = ["api-bindings", "asynchronous"]
description = "Docker Engine Client - manage and run containers, images, and volumes."
edition = "2021"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]
keywords = ["docker", "engine", "client", "compose", "container"]
license = "MPL-2.0"
name = "passivized_docker_engine_client"
readme = "README.md"
repository = "https://github.com/iamjpotts/passivized_docker_engine_client"
rust-version = "1.64"
version = "0.0.3-alpha.1"

[dependencies]
base64 = "0.13"
byteorder = "1.4"
const-str = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-tls = "0.5"
futures = "0.3"
log = "0.4"
thiserror = "1.0"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
url = "2.3"

[dev-dependencies]
backoff = { version = "0.4", features = ["futures", "tokio"] }
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-tls = "0.5"
log = "0.4"
mockito = "0.31.0"
native-tls = "0.2"
openssl = "0.10"
passivized_test_support = "0.0.3"
rand = "0.8"
serial_test = "0.9"
simple_logger = { version = "2.3", default-features = false, features = ["timestamps", "threads"] }
tar = "0.4"
thiserror = "1.0"
tempfile = "3.3"
tokio = { version = "1.21", features = ["fs"] }

[target."cfg(unix)".dependencies.hyperlocal]
version = "0.8"
